# Spark-godot-translation-qt

./: .gitignore  CMakeLists.txt  README.md  SSL_SETUP_GUIDE.md  Spark-godot-translation.pro  appobject.cpp  appobject.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qrc.qrc  styles.qss  translationworker.cpp  translationworker.h
.github/workflows/: build.yml
